...
    <!-- Preference Titles -->
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_budget">Budżet</string>
    <string name="title_activity_shopping">Zakupy</string>
    <string name="title_activity_calendar">Kalendarz</string>
    <string name="title_activity_profile">Profil</string>
    <string name="title_activity_statistics">Statystyki</string>
    <string name="title_activity_expenses_list">Lista wydatków</string>
    <string name="title_activity_income_list">Lista przychodów</string>
...
    <string name="mainmenu_addIncome_button">Dodaj przychód</string>
    <string name="mainmenu_addExpense_button">Dodaj wydatek</string>
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
...
    <string name="expense_expcatList_button">Lista kategorii wydatków</string>
    <string name="expense_fab_addExpense">Utwórz wydatkek</string>
    <string name="title_activity_expense_category">Kategorie wydatków</string>
    <string name="trans_empty_text">Jak widzisz, nie ma tutaj żadnej transakcji, dodaj ją!</string>
    <string name="exp_rc_firstLine">Example</string>
...
    <string name="finmgmt_calendar_button">Kalendarz</string>
    <string name="finmgmt_actualBudget_info_text">Aktualny budżet:</string>
    <string name="finmgmt_budgetmenu_button">Menu budżetów</string>
    <string name="finmgmt_statistics_button">Statystyki</string>
    <string name="finmgmt_transactionsList_button">Transakcje</string>
    <string name="trans_fab_addIncome">Dodaj przychód</string>
    <string name="trans_fab_addExpense">Dodaj wydatek</string>
    <string name="finmgmt_inccat_button">Kategorie przychodów</string>
    <string name="finmgmt_expcat_button">Kategorie wydatków</string>
    <string name="inccat_fab_addIncCat">Utwórz kategorię przychodów</string>
    <string name="expcat_fab_addExpCat">Utwórz kategorię wydatków</string>
    <string name="inccat_empty_text">Jak widzisz, nie ma tutaj żadnej kategorii, stwórz ją!</string>
    <string name="inccat_rc_name">Example</string>
    <string name="inccat_create_info_login">Tworzenie<br /> kategorii przychodów</string>
    <string name="inccat_createform_text_name">Nazwa kategorii przychodów</string>
    <string name="inccat_createform_submit">Utwórz kategorię przychodów</string>
    <string name="inccat_deleteform_info_delete">Usuwanie<br /> kategorii przychodów</string>
    <string name="inccat_deleteform_delete">Czy chcesz usunąć tę kategorię przychodów?</string>
    <string name="inccat_deleteform_submit">Usuń kategorię przychodów</string>
    <string name="inccat_editform_info_edit">Edycja<br /> kategorii przychodów</string>
    <string name="inccat_editform_text_name">Nowa nazwa kategorii przychodów</string>
    <string name="inccat_editform_submit">Zmień nazwę kategorii przychodów</string>
    <string name="finmgmt_feeSchedule_button">Harmonogram opłat</string>
    <string name="income_create_info_login">Tworzenie przychodu</string>
...
    <string name="expense_createform_submit">Utwórz wydatek</string>
    <string name="title_activity_financeManagement">Zarządzanie finansami</string>
    <string name="title_activity_income_category">Kategorie przychodów</string>
    <string name="title_activity_transaction">Lista transakcji</string>
    <string name="income_createform_spin_cat_info">Kategoria:</string>
    <string name="income_createform_spin_budget_info">Budżet:</string>
...
    <string name="schpay_deleteform_spin_budget_info">Budżet:</string>
    <string name="schpay_deleteform_confirmation_info">Czy na pewno<br /> chcesz usunąć tę płatność?</string>
    <string name="finmgmt_schpay_button">Zaplanowane płatności</string>
    <string name="title_activity_scheduled_payment">Zaplanowane płatności</string>
    <string name="schpay_calevent_title">Zaplanowana płatność:</string>
    <string name="schpay_editform_createTransaction">Utwórz transakcję</string>
...
    <string name="budget_createbudget_date_error_endDateWhileOtherBudgetIsRunning">Okres rozliczeniowy nie może zakończyć się w trakcie innego okresu rozliczeniowego.</string>
    <string name="budget_createbudget_date_error_otherBudgetIsExistingBetweenStartAndEndDate">Istnieje już okres rozliczeniowy pomiędzy podaną datą rozpoczęcia i zakończenia okresu rozliczeniowego.</string>
    <string name="expcat_createexpcat_name_error_empty">Podaj nazwę kategorii.</string>
    <string name="expcat_createexpcat_name_error_syntax">Nazwa kategorii powinna składać się z co najmniej dwóch liter.</string>
    <string name="expcat_createexpcat_name_error_existing">Istnieje już kategoria z podaną nazwą.</string>
    <string name="schpay_createschpay_date_error_badDate">Płatność musi zostać zaplanowana w dniu późniejszym niż dziś.</string>
    <string name="schpay_createschpay_value_error_empty">Podaj wartość płatności.</string>
...
