<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/inccat_rc_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:scaleY="2"
        android:scaleX="2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/baseline_category_24" />

    <TextView
        android:id="@+id/inccat_rc_name"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/inccat_rc_icon"
        android:gravity="center_vertical"
        android:text="@string/inccat_rc_name"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/inccat_rc_editicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dip"
        android:layout_toStartOf="@+id/inccat_rc_deleteicon"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_edit_black_24dp"/>

    <ImageView
        android:id="@+id/inccat_rc_deleteicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/baseline_delete_24"/>

</RelativeLayout>